ping_pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-log
          persistentVolumeClaim:
            claimName: pvc-1-11
      containers:
        - name: ping-pong
          image: xuanminator/ping-pong:1.11
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-log
            mountPath: /tmp/logs
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
