ping_pong/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: exercises
  name: ping-pong-stset
spec:
  serviceName: ping-pong-pg-svc # must match the headless svc
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: xuanminator/ping-pong:3.4
          imagePullPolicy: Always
          ports:
            - name: ping
              containerPort: 8089
          resources:
            requests:
              cpu: "30m"
              memory: "32Mi"
            limits:
              cpu: "60m"
              memory: "32Mi"
        - name: postgres
          image: postgres:13
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: ping-pong-pg-dat
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: ping-pong-pg-dat
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
