ping_pong/manifests/service.yaml
# ingress
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: ping-pong-svc
  labels:
    app: ping-pong
spec:
  type: LoadBalancer
  selector:
    app: ping-pong
  ports:
    - port: 80
      name: ping
      protocol: TCP
      targetPort: 8089
---
# headless - for stset
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: ping-pong-pg-svc
  labels:
    app: ping-pong
spec:
  ports:
    - port: 5432
      name: postgres
      targetPort: 5432
  clusterIP: None
  selector:
    app: ping-pong
